--- a/templates/home.html
+++ b/templates/home.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Displayed Results</title>
+    <title>Life Choices Academy</title>
     <link rel="shortcut icon" href="/static/LIFE-CHOICES-ICON-ON-GREEN.png" type="image" />
 </head>
 <body style="height: 100vh; display: flex; justify-content: center; align-items: center; flex-direction: column; background-color: black">
 <img src="/static/new-logo.jpg"><br>
-<strong style="color: #a7ce00; font-size: 50px;>">Result Of Addition: {{ msg }}</strong>
-<h2><a style="text-decoration: none; white-space: nowrap; background-color: #a7ce00; color: black; padding: 15px; border-radius: 50px; text-transform: uppercase; font-size: 20px;" href="/">Main Page</a></h2>
+<strong style="font-size: 50px; color: white;">Life Choices Academy Home Page</strong>
 </body>
 </html>
